<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="176dp"
            android:layout_marginStart="176dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="177dp" android:layout_marginRight="177dp" android:layout_marginBottom="122dp"
            app:layout_constraintBottom_toTopOf="@+id/button5" android:text="@string/txt1"
            android:layout_marginTop="86dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginEnd="45dp" android:layout_marginRight="45dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/button4"
            android:layout_marginLeft="158dp" android:layout_marginStart="158dp"
            android:layout_marginTop="162dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
            android:text="@string/btn3" android:onClick="suma"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toStartOf="@+id/button3"
            android:layout_marginEnd="30dp" android:layout_marginRight="30dp" android:layout_marginTop="162dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
            android:text="@string/btn4" android:onClick="resta"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:text="@string/btn5" android:layout_marginEnd="161dp"
            android:layout_marginRight="161dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="162dp"
            android:layout_marginStart="162dp" android:layout_marginBottom="29dp"
            app:layout_constraintBottom_toTopOf="@+id/button6"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6" android:layout_marginEnd="163dp" android:layout_marginRight="163dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp" android:layout_marginStart="160dp" android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:text="@string/btn6"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginEnd="178dp" android:layout_marginRight="178dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="175dp" android:layout_marginStart="175dp" android:layout_marginBottom="335dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/txt2"/>
    <ListView
            android:layout_width="395dp"
            android:layout_height="318dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>